--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TDD workshop complete version with some frontend and input boundaries",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
