--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,10 +51,10 @@ jobs:
       with:
         node-version: 10.x
 
-    - name: npm install, make test-coverage
+    - name: npm install, npm test
       run: |
         npm install
-        make test-coverage
+        npm test
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
