--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,33 +30,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
 
-- name: Coveralls GitHub Action
-  uses: coverallsapp/github-action@1.1.3
-
-on: ["push", "pull_request"]
-
-name: Test Coveralls
-
-jobs:
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-
-    - uses: actions/checkout@v1
-
-    - name: Use Node.js 10.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.x
-
-    - name: npm install, npm test
-      run: |
-        npm install
-        npm test
-
     - name: Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@main
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
